[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greycloud"
version = "0.3.1"
description = "Reusable Google GenAI/Vertex AI Client Module"
readme = "README.md"
# google-genai >= 1.48.0 requires Python >= 3.10.
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GreyCloud Contributors"}
]
keywords = ["google", "vertex-ai", "genai", "gemini", "ai", "ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Use a modern google-genai that aligns with Python >= 3.10.
    "google-genai>=1.59.0",
    "google-auth>=2.0.0",
    "google-cloud-storage>=3.8.0",
    "aiolimiter>=1.1.0",
]

[project.optional-dependencies]
storage = [
    "google-cloud-storage>=3.8.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "greycloud[storage,dev]",
]

[project.urls]
Homepage = "https://github.com/jbff/greycloud"
Documentation = "https://github.com/jbff/greycloud#readme"
Repository = "https://github.com/jbff/greycloud"
Issues = "https://github.com/jbff/greycloud/issues"

[tool.setuptools]
packages = ["greycloud"]

[tool.setuptools.package-data]
greycloud = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    # google-genai uses _UnionGenericAlias (deprecated in Python 3.17); ignore in their code
    "ignore::DeprecationWarning:google.genai.types",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "auth: Authentication tests",
    "batch: Batch processing tests",
    "cache: Context caching tests",
]

[tool.coverage.run]
source = ["greycloud"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
